<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/sorting"
                android:gravity="center"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textview_distance"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="Mesafe"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/textview_selector_left"
                    android:clickable="true" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/textview_alphabet"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="Alfabetik"
                    android:gravity="center"
                    android:background="@drawable/textview_selector_center"
                    android:clickable="true" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/textview_popular"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="Popüler"
                    android:gravity="center"
                    android:background="@drawable/textview_selector_right"
                    android:clickable="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_gps_fixed_grey_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/distance"
                android:textStyle="bold" />
        </LinearLayout>

        <tr.com.dteknoloji.filterpage.seekbar.ComboSeekBar
            android:id="@+id/combo_seekbar_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:padding="10dp"

            app:color1="#7D8798"
            app:multiline="false" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_wallet_membership_grey_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_error_grey_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textview_all"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/all"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/textview_selector_left" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textview_cheap"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="tl"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/textview_selector_center" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textview_suitable"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="tl tl"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/textview_selector_center" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textview_expensive"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="tl tl tl"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/textview_selector_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_local_restaurant_grey_24dp"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner_kitchen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_gravity="center_vertical"
                android:spinnerMode="dialog"
                style="@style/SpinnerAsEditText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_arrow_right_grey_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_brightness_2_grey_24dp" />

            <Spinner
                android:id="@+id/spinner_consept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_gravity="center_vertical"
                android:spinnerMode="dialog"
                style="@style/SpinnerAsEditText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_arrow_right_grey_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_place_grey_24dp"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_gravity="center_vertical"
                android:spinnerMode="dialog"
                style="@style/SpinnerAsEditText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_arrow_right_grey_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_perm_identity_grey_24dp" />

            <Spinner
                android:id="@+id/spinner_clothes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:spinnerMode="dialog"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                style="@style/SpinnerAsEditText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_arrow_right_grey_24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_marginTop="25dp"
            android:background="@android:color/holo_green_light" />
    </LinearLayout>
</ScrollView>
